// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 8,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 14,
        "fontWeight": "600",
        "letterSpacing": 0.75,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    HELLO
  </Text>
</View>
`;

exports[`renders disable 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 8,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "hsla(0, 0%, 0%, 0.38)",
        "fontSize": 14,
        "fontWeight": "600",
        "letterSpacing": 0.75,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    HELLO
  </Text>
</View>
`;
